# 111111E1DE5AB-A8F3-4A02-AE73-65699D576908

./: .BridgeLabelsAndRatings  .BridgeSort  .gitignore  AGENTS.md  ArcMeta-New.md  ArcMeta.manifest  ArcMeta.md  ArcMeta.rc  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  FileItemDelegate.cpp  HeaderBar_cpp_extract.txt  HeaderBar_h_extract.txt  MainWindow.cpp.old  MainWindow.h.old  Memories.md  Prompt.md  SvgIcons.h  UI风格样式参考版.md  build_log.txt  build_log_final.txt  extract_all.py  extract_dependencies.py  extract_headerbar.py  extract_mainwindow.py  extract_missing.py  extract_models.py  extract_quickpreview.py  extract_searchlineedit.py  fix_main.py  get_line.py  legacy_frameless.cpp  old_editor_cpp.txt  old_filterpanel_cpp.txt  old_mainwindow_cpp.txt  old_mainwindow_cpp_part2.txt  old_metapanel_cpp.txt  old_notedelegate_h.txt  restore_more.py  (+5 more)
ArcMeta_0329_184503/src/db/: FolderRepo.cpp  SyncEngine.cpp
ArcMeta_0329_184503/src/ui/: CategoryPanel.cpp  CategoryPanel.h  ContentPanel.cpp  FilterPanel.h  MainWindow.cpp  ToolTipOverlay.cpp
Eagle/: 20260410_220012_code_export.md
resources/: app.manifest
src/: SvgIcons.h  main.cpp
src/core/: AES.cpp  AES.h  ActionRecorder.cpp  ActionRecorder.h  ClipboardMonitor.cpp  ClipboardMonitor.h  CoreController.cpp  DatabaseManager.cpp  DatabaseManager.h  FileCryptoHelper.cpp  FileCryptoHelper.h  FileStorageHelper.cpp  FileStorageHelper.h  HardwareInfoHelper.cpp  HardwareInfoHelper.h  HotkeyManager.cpp  HotkeyManager.h  HttpServer.cpp  HttpServer.h  KeyboardHook.cpp  KeyboardHook.h  MessageCaptureHandler.cpp  MessageCaptureHandler.h  NoteTypes.h  OCRManager.cpp  OCRManager.h  ReminderService.cpp  ReminderService.h  ShortcutManager.cpp
src/crypto/: EncryptionManager.cpp  EncryptionManager.h
src/db/: CategoryItemRepo.cpp  CategoryItemRepo.h  CategoryRepo.cpp  CategoryRepo.h  ConfigRepo.cpp  ConfigRepo.h  Database.cpp  Database.h  FavoritesRepo.cpp  FavoritesRepo.h  FolderRepo.cpp  FolderRepo.h  ItemRepo.cpp  ItemRepo.h  SyncEngine.cpp  SyncEngine.h
src/meta/: AmMetaJson.cpp  AmMetaJson.h  BatchRenameEngine.cpp  BatchRenameEngine.h  MetadataDefs.h  MetadataManager.cpp  MetadataManager.h  SyncQueue.cpp  SyncQueue.h
src/mft/: MftReader.cpp  MftReader.h  ParallelSearcher.h  PathBuilder.cpp  PathBuilder.h  UsnWatcher.cpp  UsnWatcher.h
src/models/: CategoryModel.cpp  CategoryModel.h  NoteModel.cpp  NoteModel.h
src/ui/: ActivationDialog.cpp  ActivationDialog.h  AdvancedTagSelector.cpp  AdvancedTagSelector.h  BatchRenameDialog.cpp  BatchRenameDialog.h  BatchRenameEngine.cpp  BatchRenameEngine.h  BatchRenamePreviewDialog.cpp  BatchRenamePreviewDialog.h  BreadcrumbBar.cpp  CategoryDelegate.h  CategoryLockWidget.cpp  CategoryLockWidget.h  CategoryModel.cpp  CategoryModel.h  CategoryPanel.cpp  CategoryPanel.h  CategoryPasswordDialog.cpp  CategoryPasswordDialog.h  CleanListView.cpp  CleanListView.h  ClickableLineEdit.h  ColorPickerWindow.cpp  ColorPickerWindow.h  ContentPanel.cpp  ContentPanel.h  CryptoWorkflow.h  DropListView.cpp  DropTreeView.cpp  DropTreeView.h  Editor.cpp  Editor.h  FavoritesPanel.cpp  FavoritesPanel.h  FileItemDelegate.cpp  FileItemDelegate.h  FileSearchHistoryPopup.h  FileSearchWidget.cpp  FileSearchWidget.h  (+92 more)
仅供参考-不可修改/: FileItemDelegate.cpp  file_manager_ui_layout.html  旧版本.md
旧版本-3/: CMakeLists.txt
旧版本-3/src/ui/: CategoryModel.h  CategoryPanel.cpp  CategoryPanel.h  ContentPanel.cpp  MainWindow.cpp
